--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Natureal</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="nav-elements">
+                <ul>
+                    <li class="nav-items"><a href="#">Catalog</a></li>
+                    <li class="nav-items"><a href="#">About</a></li>
+                    <li class="nav-items"><a href="#">Contact</a></li>
+                    <li class="nav-items"><a href="#">Constructor</a></li>
+                </ul>
+            </div>
+            <div class="logo">
+                NATUREAL
+            </div>
+            <div class="nav-elements">
+                <ul>
+                    <li class="nav-items"><a href="#">Search</a></li>
+                    <li class="nav-items"><a href="#">Account</a></li>
+                    <li class="nav-items"><a href="#">Wishlist</a></li>
+                    <li class="nav-items"><a href="#">Cart</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div>
+        
+    </div>
 </body>
 </html>
