home page sections

--- a/index.html
+++ b/index.html
@@ -1,40 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Natureal</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
+  <body>
     <nav>
-        <div class="nav-elements">
-            <ul>
-                <li class="nav-items"><a href="#">Catalog</a></li>
-                <li class="nav-items"><a href="#">About</a></li>
-                <li class="nav-items"><a href="#">Contact</a></li>
-                <li class="nav-items"><a href="#">Constructor</a></li>
-            </ul>
-        </div>
-        <div class="logo">
-            NATUREAL
-        </div>
-        <div class="nav-elements">
-            <ul>
-                <li class="nav-items"><a href="#">Search</a></li>
-                <li class="nav-items"><a href="#">Account</a></li>
-                <li class="nav-items"><a href="#">Wishlist</a></li>
-                <li class="nav-items"><a href="#">Cart</a></li>
-            </ul>
-        </div>
+      <div class="nav-elements">
+        <ul>
+          <li class="nav-items"><a href="#">Catalog</a></li>
+          <li class="nav-items"><a href="#">About</a></li>
+          <li class="nav-items"><a href="#">Contact</a></li>
+          <li class="nav-items"><a href="#">Constructor</a></li>
+        </ul>
+      </div>
+      <div class="logo">NATUREAL</div>
+      <div class="nav-elements">
+        <ul>
+          <li class="nav-items"><a href="#">Search</a></li>
+          <li class="nav-items"><a href="#">Account</a></li>
+          <li class="nav-items"><a href="#">Wishlist</a></li>
+          <li class="nav-items"><a href="#">Cart</a></li>
+        </ul>
+      </div>
     </nav>
     <header>
-        
+      <div class="landing">
+        <div class="header-left">
+          <img class="header-img" src="assets/images/headerimg.png" />
+        </div>
+
+        <div class="header-right">
+          <h2 class="title">FROM SKIN TO YOUR<br />SOUL</h2>
+
+          <div class="header-item-img">
+            <img
+              src="assets/images/itemhead.png"
+              style="height: 220px; width: 180px"
+            />
+          </div>
+
+          <div class="landing-subheading" style="width: 50%">
+            <p>
+              Each of our formulas is designed to restore skin to its optimal
+              condition to maintain your natural beauty effortlessly.
+            </p>
+          </div>
+          <div class="shop-btn">Shop Now</div>
+        </div>
+      </div>
     </header>
 
+    <section class="container-one">
+      <div class="bestsellers">
+        <div class="partition">
+          <div class="heading">BESTSELLERS</div>
+          <div class="icons">
+            <div class="product-icon"><img src="assets/icons/arrow.svg" /></div>
+            <div class="product-icon"><img src="assets/icons/arrow.svg" /></div>
+          </div>
+        </div>
 
-</body>
+        <div class="partition">
+          <div class="content">
+            <p>
+              Check out our bestsellers that continue to make our loyal
+              customers fall in love again and again over time.
+            </p>
+          </div>
+          <div class="shop-btn">Shop Now</div>
+        </div>
+      </div>
+      <div class="bestseller-products"></div>
+    </section>
 
+    <section class="container-two">
+      <div class="heading">CATALOG</div>
+      <div class="catalog">
+        <div class="catalog-img">
+          <img src="assets/images/catalogimg.png" />
+        </div>
+        <div class="catalog-content">
+          <div class="content">
+            <p>
+              You don't have to choose between safety, quality and convenience.
+              We have already thought through everything - for ourselves and for
+              you.
+            </p>
+          </div>
+          <div class="links">
+            <div class="row">
+              <div>START SET</div>
+              <img
+                src="assets/icons/upper-right-arrow.svg"
+                style="height: 1rem"
+              />
+            </div>
+            <div class="row">
+              <div>SYSTEM OF SKINCARE</div>
+              <img
+                src="assets/icons/upper-right-arrow.svg"
+                style="height: 1rem"
+              />
+            </div>
+            <div class="row">
+              <div>HAIR CARE</div>
+              <img
+                src="assets/icons/upper-right-arrow.svg"
+                style="height: 1rem"
+              />
+            </div>
+            <div class="row">
+              <div>BODY CARE</div>
+              <img
+                src="assets/icons/upper-right-arrow.svg"
+                style="height: 1rem"
+              />
+            </div>
+            <div class="row">
+              <div>FACE CARE</div>
+              <img
+                src="assets/icons/upper-right-arrow.svg"
+                style="height: 1rem"
+              />
+            </div>
+            <div class="row">
+              <div>GIFTS</div>
+              <img
+                src="assets/icons/upper-right-arrow.svg"
+                style="height: 1rem"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container-three">
+        
+    </section>
+  </body>
 </html>
