home page sections

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               condition to maintain your natural beauty effortlessly.
             </p>
           </div>
-          <div class="shop-btn">Shop Now</div>
+          <div class="shop-btn">SHOP NOW</div>
         </div>
       </div>
     </header>
@@ -71,7 +71,7 @@
               customers fall in love again and again over time.
             </p>
           </div>
-          <div class="shop-btn">Shop Now</div>
+          <div class="shop-btn">SHOP NOW</div>
         </div>
       </div>
       <div class="bestseller-products"></div>
@@ -140,7 +140,11 @@
     </section>
 
     <section class="container-three">
-        
+        <div class="custom-product">
+            <div class="heading">CREATE YOUR SOUL<br>PRODUCT</div>
+            <div class="content">With the help of our constructor, you have the opportunity to create your unique product, which will be released in a single copy</div>
+            <div class="create-btn">CREATE PRODUCT</div>
+        </div>
     </section>
   </body>
 </html>
