home page sections

--- a/index.html
+++ b/index.html
@@ -140,11 +140,34 @@
     </section>
 
     <section class="container-three">
-        <div class="custom-product">
-            <div class="heading">CREATE YOUR SOUL<br>PRODUCT</div>
-            <div class="content">With the help of our constructor, you have the opportunity to create your unique product, which will be released in a single copy</div>
-            <div class="create-btn">CREATE PRODUCT</div>
+      <div class="custom-product">
+        <div class="heading">CREATE YOUR SOUL<br />PRODUCT</div>
+        <div class="content">
+          With the help of our constructor, you have the opportunity to create
+          your unique product, which will be released in a single copy
         </div>
+        <div class="create-btn">CREATE PRODUCT</div>
+      </div>
+    </section>
+
+    <section class="container-four">
+      <div class="philosophy">
+        <div class="heading">OUR PHILOSOPHY</div>
+        <div class="phil-subsec">
+          <div class="phil-img"><img src="assets/images/philimg.png" /></div>
+          <div class="content">
+            <div class="para">
+              We believe that beautiful skin is a reflection of our internal
+              health. Our cosmetics are based on the purest and most powerful
+              plant components, combined with advanced scientific achievements.
+            </div>
+            <div class="read-btn">READ MORE</div>
+          </div>
+        </div>
+      </div>
+      <div class="phil-base-img">
+        <img src="assets/images/philbaseimg.png" />
+      </div>
     </section>
   </body>
 </html>
