--- a/index.html
+++ b/index.html
@@ -169,5 +169,117 @@
         <img src="assets/images/philbaseimg.png" />
       </div>
     </section>
+    <section class="container-five">
+      <div class="new-arrivals">
+        <div class="partition">
+          <div class="heading">NEW ARRIVALS</div>
+          <div class="icons">
+            <div class="product-icon"><img src="assets/icons/arrow.svg" /></div>
+            <div class="product-icon"><img src="assets/icons/arrow.svg" /></div>
+          </div>
+        </div>
+
+        <div class="partition">
+          <div class="content">
+            <p>
+              New arrivals that deserve a place in your bathroom or in your
+              travel bag. New formulas aimed at improving the condition of your
+              skin.
+            </p>
+          </div>
+          <div class="shop-btn">SHOP NOW</div>
+        </div>
+      </div>
+      <div class="new-arrivals-products"></div>
+    </section>
+
+    <section class="container-six">
+      <div class="stories">
+        <div class="heading">STORIES OF OUR<br />CUSTOMERS</div>
+        <div class="content">
+          <div class="para">
+            Stories of our friends about the real thing, about how their
+            dizzying romance with their skin grew into a healthy and fulfilling
+            relationship.
+          </div>
+          <div class="stories-btn">READ STORIES</div>
+        </div>
+      </div>
+      <div class="stories-img">
+        <img src="assets/images/stories.png" />
+      </div>
+    </section>
+
+    <section class="container-seven">
+      <div class="heading">FOLLOW US</div>
+      <div class="content">
+        <div><img src="assets/images/imgfollow1.png" /></div>
+        <div><img src="assets/images/imgfollow2.png" /></div>
+        <div class="incontent">
+          <div class="para">
+            Community of healthy skin fans on our Instagram.
+          </div>
+          <div class="insta-btn">@natureal.ua</div>
+        </div>
+        <div><img src="assets/images/imgfollow3.png" /></div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="brand">
+        <div class="logo">NATUREAL</div>
+        <div class="sub-content">
+          Subscribe to the Natureal newsletter to receive notifications about
+          new products, sales and unique offers.
+        </div>
+        <!-- <label for="email">Enter your email:</label> -->
+        <!-- <input type="email" id="email" name="email"/> -->
+        <div class="light-text">2023 @ Natureal. All rights reserved</div>
+      </div>
+
+      <div class="catalog">
+        <div class="heading">CATALOG</div>
+        <div class="content">
+          <ul>
+            <li><a href="#">Hair</a></li>
+            <li><a href="#">Face</a></li>
+            <li><a href="#">Body</a></li>
+            <li><a href="#">Systems of Skincare</a></li>
+            <li><a href="#">Gifts</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="info">
+        <div class="heading">INFO</div>
+        <div class="content">
+          <ul>
+            <li><a href="#">Delivery & Payment</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Cooperation</a></li>
+            <li><a href="#">Returns</a></li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="toread-and-shop">
+        <div class="heading">TO READ</div>
+        <div class="content">
+          <ul>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Public Offer</a></li>
+          </ul>
+        </div>
+        <div class="heading">SHOP</div>
+        <div class="content">
+          <ul>
+            <li>Mon-Fri:<br />10.00-18.00</li>
+            <li>Phone: <br />+38073 73 73 780r</li>
+            <li>Ivano-Frankivsk,<br />Rebeta Street</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
