splash done and assets

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="nav-elements">
         <ul>
           <li class="nav-items"><a href="#">Catalog</a></li>
-          <li class="nav-items"><a href="#">About</a></li>
+          <li class="nav-items"><a href="screens/about/about.html">About</a></li>
           <li class="nav-items"><a href="#">Contact</a></li>
           <li class="nav-items"><a href="#">Constructor</a></li>
         </ul>
@@ -20,7 +20,7 @@
       <div class="logo">NATUREAL</div>
       <div class="nav-elements">
         <ul>
-          <li class="nav-items"><a href="#">Search</a></li>
+          <li class="nav-items"><a href="screens/splash/splash.html">Search</a></li>
           <li class="nav-items"><a href="#">Account</a></li>
           <li class="nav-items"><a href="#">Wishlist</a></li>
           <li class="nav-items"><a href="#">Cart</a></li>
