products on home screen

--- a/index.html
+++ b/index.html
@@ -74,7 +74,26 @@
           <div class="shop-btn">SHOP NOW</div>
         </div>
       </div>
-      <div class="bestseller-products"></div>
+      <div class="bestseller-products">
+        <div class="products-container">
+          <div class="product-img">
+            <img src="assets/images/p6.png">
+          </div>
+          <div class="product-content">
+            <div class="desc-1">Cleansing for face and body MISS GREEN</div>
+            <div class="price">$150</div>
+          </div>
+        </div>
+        <div class="products-container">
+          <div class="product-img">
+            <img src="assets/images/p5.png">
+          </div>
+          <div class="product-content">
+            <div class="desc-1">PREBIOTIC tonic<br>essence</div>
+            <div class="price">$100</div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="container-two">
@@ -190,7 +209,28 @@
           <div class="shop-btn">SHOP NOW</div>
         </div>
       </div>
-      <div class="new-arrivals-products"></div>
+      <div class="new-arrival-products">
+        <div class="products-container">
+          <div class="product-img">
+            <img src="assets/images/p1.png">
+          </div>
+          <div class="product-content">
+            <div class="desc-1">Peeling for exfoliation<br>
+              FERMENT</div>
+            <div class="price">$150</div>
+          </div>
+        </div>
+        <div class="products-container">
+          <div class="product-img">
+            <img src="assets/images/p3.png">
+          </div>
+          <div class="product-content">
+            <div class="desc-1">Balm for thin hair
+              RESOURSE</div>
+            <div class="price">$100</div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="container-six">
