--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Natureal</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
@@ -17,7 +17,7 @@
           <li class="nav-items"><a href="#">Constructor</a></li>
         </ul>
       </div>
-      <div class="logo">NATUREAL</div>
+      <div class="logo"><a href="#">NATUREAL</a></div>
       <div class="nav-elements">
         <ul>
           <li class="nav-items"><a href="screens/splash/splash.html">Search</a></li>
