--- a/screens/about/about.html
+++ b/screens/about/about.html
@@ -1,12 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="screens/about/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../styles.css" />
+    <link rel="stylesheet" href="about.css" />
+
     <title>Natureal: About</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <nav>
+      <div class="nav-elements">
+        <ul>
+          <li class="nav-items"><a href="#">Catalog</a></li>
+          <li class="nav-items">
+            <a href="#">About</a>
+          </li>
+          <li class="nav-items"><a href="#">Contact</a></li>
+          <li class="nav-items"><a href="#">Constructor</a></li>
+        </ul>
+      </div>
+      <div class="logo"><a href="../../index.html">NATUREAL</a></div>
+      <div class="nav-elements">
+        <ul>
+          <li class="nav-items">
+            <a href="#">Search</a>
+          </li>
+          <li class="nav-items"><a href="#">Account</a></li>
+          <li class="nav-items"><a href="#">Wishlist</a></li>
+          <li class="nav-items"><a href="#">Cart</a></li>
+        </ul>
+      </div>
+    </nav>
+    <header>
+      <div class="natureal-story">OUR NATUREAL STORY</div>
+      <div class="desc">
+        We save precious time that you don't need to spend looking for
+        cosmetics. You don't have to choose between safety, quality and
+        convenience. We have already thought through everything - for ourselves
+        and for you.
+      </div>
+    </header>
+
+    <section class="about-one">
+      <div class="vacant">
+      </div>
+      <div class="about-one-content">
+        <div class="about-desc">
+          Stress and constant haste deprive us of the main thing - the feeling
+          of happiness and harmony. We forget about ourselves and relegate to
+          the background. And we believe that happy women create a happy
+          society. And by taking care of ourselves, we restore our life resource
+          to create beauty around us. A woman is an INSPIRATION.<br> <br>We have created
+          cosmetics that are convenient to use at home and take on any trip,
+          even if it is a weekend at grandma's.<br> <br>And let an ordinary everyday
+          activity be a ritual that gives you back yourself in 10 minutes a day.
+          Just enjoy the moment here and now.
+        </div>
+        <div class="about-one-image"><img src="../../assets/images/bottles.png"></img></div>
+      </div>
+    </section>
+
+    <section class="about-two"> 
+        <div class="vacant">
+            <div class="about-two-product">
+                <div class="about-two-product-image">
+                    <img src="../../assets/images/abouttwoimg.png">
+                </div>
+                <div class="desc">
+                    Each product contains a minimum of 80% highly active ingredients and 40% organic components.
+                </div>
+            </div>
+        </div>
+        <div class="about-two-content">
+            <div class="our-principles-head">OUR PRINCIPLES</div>
+            <div class="principles-c1">Components undergo ONLY biological processes, such as fermentation, distillation and cold pressing. 70% of our ingredients are certified by COSMOS / ECOCERT.</div>
+            <div class="principles-c2">Each product of Natureal is developed with the support of technologists and chemists.<br><br>
+                When selecting components, we give preference to those that have research results. We work with market leaders of organic components from Spain, Italy, Japan, France.</div>
+            <div class="principles-img"> <img src="../../assets/images/philbaseimg.png"></div>
+            <div class="principles-c3">We enthusiastically select concentrated active components for our cosmetics, the main task of which is to restore pH and support the skin's ability to regenerate itself.<br><br>
+                Deliver the necessary components to help her to strengthen the barrier and she could protect herself from the effects of the environment. And as a result get healthy and glowing skin.</div>
+        </div>
+    </section>
+    <section class="about-three">
+        <div class="vacant"></div>
+        <div class="our-philosophy">
+            <div class="our-philosophy-head">OUR PHILOSOPHY</div>
+            <div class="philosophy-c1">Our cosmetics are based on the purest and most powerful plant components, combined with advanced scientific achievements.</div>
+            <div class="philosophy-c2">Our philosophy includes naturalness without BUT. Let's not forget about the effectiveness of cosmetics.<br><br>
+                Absolutely no animal testing. Aesthetics.
+                Uncompromising purity of ingredients. Mini volume as an opportunity to try and use as a travel version. Easy system of selection of means and no hours of torment of choice.</div>
+        </div>
+    </section>
+    <section class="about-four">
+        <div class="vacant"><img src="../../assets/images/imggirl1.png"></div>
+        <div class="about-four-img">
+            <img src="../../assets/images/bgownproduct.png">
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="brand">
+          <div class="logo">NATUREAL</div>
+          <div class="sub-content">
+            Subscribe to the Natureal newsletter to receive notifications about
+            new products, sales and unique offers.
+          </div>
+          <!-- <label for="email">Enter your email:</label> -->
+          <!-- <input type="email" id="email" name="email"/> -->
+          <div class="light-text">2023 @ Natureal. All rights reserved</div>
+        </div>
+  
+        <div class="catalog">
+          <div class="heading">CATALOG</div>
+          <div class="content">
+            <ul>
+              <li><a href="#">Hair</a></li>
+              <li><a href="#">Face</a></li>
+              <li><a href="#">Body</a></li>
+              <li><a href="#">Systems of Skincare</a></li>
+              <li><a href="#">Gifts</a></li>
+            </ul>
+          </div>
+        </div>
+  
+        <div class="info">
+          <div class="heading">INFO</div>
+          <div class="content">
+            <ul>
+              <li><a href="#">Delivery & Payment</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Cooperation</a></li>
+              <li><a href="#">Returns</a></li>
+              <li><a href="#">Contact us</a></li>
+            </ul>
+          </div>
+        </div>
+  
+        <div class="toread-and-shop">
+          <div class="heading">TO READ</div>
+          <div class="content">
+            <ul>
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Public Offer</a></li>
+            </ul>
+          </div>
+          <div class="heading">SHOP</div>
+          <div class="content">
+            <ul>
+              <li>Mon-Fri:<br />10.00-18.00</li>
+              <li>Phone: <br />+38073 73 73 780r</li>
+              <li>Ivano-Frankivsk,<br />Rebeta Street</li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+  </body>
 </html>
