--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="nav-elements">
         <ul>
           <li class="nav-items"><a href="screens/splash/splash.html">Search</a></li>
-          <li class="nav-items"><a href="#">Account</a></li>
+          <li class="nav-items"><a href="screens/account/signup.html">Account</a></li>
           <li class="nav-items"><a href="#">Wishlist</a></li>
           <li class="nav-items"><a href="#">Cart</a></li>
         </ul>
@@ -259,7 +259,7 @@
           <div class="para">
             Community of healthy skin fans on our Instagram.
           </div>
-          <div class="insta-btn">@natureal.ua</div>
+          <button class="insta-btn">@natureal.ua</button>
         </div>
         <div><img src="assets/images/imgfollow3.png" /></div>
       </div>
