--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <section class="splash-container"></section>
     <nav>
       <div class="nav-elements">
         <ul>
@@ -321,5 +322,6 @@
         </div>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
