--- a/splash.html
+++ b/splash.html
@@ -11,7 +11,7 @@
         padding: 0;
         box-sizing: border-box;
       }
-      .splash-container {
+      .bg {
         display: flex;
         background-image: url("assets/images/bgmainnn.png");
         background-repeat: no-repeat;
@@ -56,7 +56,7 @@
     </style>
   </head>
   <body>
-    <header class="splash-container">
+    <header class="bg">
       <div class="container">
         <div class="con-column">
           <img src="../../assets/images/productmain.png" />
@@ -64,6 +64,6 @@
         </div>
       </div>
     </header>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
